--- a/sass_scss/6-nested_hover.scss
+++ b/sass_scss/6-nested_hover.scss
@@ -1,6 +1,7 @@
-// Nested Hover
+// Nested Hover - changes colour on hover
 button {
     color: #FF0000;
+
     &:hover {
         color: #00FF00; 
     }
