--- a/sass_scss/100-loop_col.scss
+++ b/sass_scss/100-loop_col.scss
@@ -1,8 +1,6 @@
 /* Columns and operators- creates classes with different width */
-@use "sass:math";
-
 @for $i from 1 through 4 {
     .col-#{$i} {
-        width: math.div(1, #{$i}) * 100%;
+        width: 100% / $i;
     }
 }
