--- a/sass_scss/103-sort_strings.scss
+++ b/sass_scss/103-sort_strings.scss
@@ -1,6 +1,8 @@
 /* Sorts through strings in a lists and prints out the sorted list */
 @import '103-sort_list';
 
+$list: $list_to_sort;
+
 @function sort-list($list) {
   $n: length($list);
   @for $i from 1 through $n {
@@ -8,7 +10,7 @@
       $current: nth($list, $j);
       $next: nth($list, $j + 1);
       @if str-compare($current, $next) > 0 {
-        // Swap the current and next items
+        //Swap the current and next items
         $temp: $current;
         $list: set-nth($list, $j, $next);
         $list: set-nth($list, $j + 1, $temp);
@@ -16,18 +18,18 @@
     }
   }
   @return $list;
+  @debug #{$list};
 }
   
 //Function to compare two strings
 @function str-compare($str1, $str2) {
-    @if $str1 > $str2 {
-      @return 1;
-    } @else if $str1 < $str2 {
-      @return -1;
-    } @else {
-      @return 0;
-    }
+  @if $str1 > $str2 {
+    @return 1;
+  } 
+  @else if $str1 < $str2 {
+    @return -1;
+  } 
+  @else {
+    @return 0;
+  }
 }
-
-$sorted-list: sort-list($list_to_sort);
-@debug "#{$sorted-list}";
