--- a/sass_scss/103-sort_strings.scss
+++ b/sass_scss/103-sort_strings.scss
@@ -18,7 +18,7 @@ $list: $list_to_sort;
     }
   }
   @return $list;
-  @debug #{$list};
+  @debug "#{$list}";
 }
   
 //Function to compare two strings
